v5/DynamicsCrm.DevKit.Analyzers/AnalyzerReleases.Unshipped.md
; Unshipped analyzer release
; https://github.com/dotnet/roslyn-analyzers/blob/master/src/Microsoft.CodeAnalysis.Analyzers/ReleaseTrackingAnalyzers.Help.md

### New Rules
Rule ID | Category | Severity | Notes
--------|----------|----------|-------
DEVKIT1001 | DynamicsCrm.DevKit | Error | [Filtering attributes for Create/Update](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1001)
DEVKIT1002 | DynamicsCrm.DevKit | Warning | [Don't use ColumnSet(true)](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1002)
DEVKIT1003 | DynamicsCrm.DevKit | Error | [Plugin image validation](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1003)
DEVKIT1004 | DynamicsCrm.DevKit | Info | [Deprecated SDK messages](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1004)
DEVKIT1005 | DynamicsCrm.DevKit | Warning | [EntityReference maybe null](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1005)
DEVKIT1006 | DynamicsCrm.DevKit | Warning | [Batch requests in plugins](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1006)
DEVKIT1007 | DynamicsCrm.DevKit | Error | [Stateless IPlugin](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1007)
DEVKIT1008 | DynamicsCrm.DevKit | Error | [Parallel execution in plugins](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1008)
DEVKIT1009 | DynamicsCrm.DevKit | Warning | [Set KeepAlive to false](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1009)
DEVKIT1010 | DynamicsCrm.DevKit | Warning | [Set HTTP Timeout](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1010)
DEVKIT1011 | DynamicsCrm.DevKit | Warning | [Use InvalidPluginExecutionException](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1011)
DEVKIT1012 | DynamicsCrm.DevKit | Info | [Consider using ITracingService](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1012)
DEVKIT1013 | DynamicsCrm.DevKit | Info | [Avoid Retrieve/RetrieveMultiple plugins](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1013)
DEVKIT1014 | DynamicsCrm.DevKit | Error | [Avoid AppDomain events](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1014)
DEVKIT1015 | DynamicsCrm.DevKit | Info | [Avoid blocking async patterns](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1015)
DEVKIT1016 | DynamicsCrm.DevKit | Info | [Avoid RetrieveAsIfPublished](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1016)
DEVKIT1017 | DynamicsCrm.DevKit | Info | [Avoid Console output](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1017)
DEVKIT1018 | DynamicsCrm.DevKit | Error | [Avoid File/IO operations](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1018)
DEVKIT1019 | DynamicsCrm.DevKit | Warning | [Check context.Depth to prevent infinite loops](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1019)
DEVKIT1020 | DynamicsCrm.DevKit | Error | [DataProvider requires DataSource](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1020)
DEVKIT1021 | DynamicsCrm.DevKit | Warning | [Use ITracingService in catch blocks](https://github.com/phuocle/Dynamics-Crm-DevKit/wiki/DEVKIT1021)